--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,5 +1,20 @@
 ---
 steps:
+  - name: ":packer: Build AMI"
+    command: ".buildkite/bin/build-ami"
+    agents:
+      - queue=elastic
+
+  - wait
+
+  - name: ":packer: Remove AMI"
+    command: ".buildkite/bin/remove-ami"
+    agents:
+      - queue=elastic
+    branches: !master
+
+  - wait
+
   - name: ":terraform: Plan"
     command: ".buildkite/bin/plan"
     agents:
