Rename check-format to validate and check syntax as well

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -9,8 +9,8 @@ steps:
       BUILDKITE_DOCKER_COMPOSE_CONTAINER: app
       BUILDKITE_DOCKER_COMPOSE_FILE: docker-compose.test.yml
 
-  - name: ":terraform: Format"
-    command: ".buildkite/bin/check-format"
+  - name: ":terraform: Validate"
+    command: ".buildkite/bin/validate"
 
   - wait
 
