--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -24,6 +24,8 @@ steps:
   - name: ":terraform: Apply"
     command: "buildkite-agent artifact download authorized-users . && .buildkite/bin/apply"
     branches: master
+    env:
+      TF_authorized_users: authorized-users
 
   - wait
 
