Make bootstrap script public-read on upload

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -25,6 +25,7 @@ steps:
     env:
       BUILDKITE_SECRETS_KEY: ""
       BUILDKITE_USE_KMS: false
+      BUILDKITE_S3_ACL: public-read
 
   - wait
 
