--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -34,10 +34,7 @@ Resources:
   PrivateSubnet0:
     Type: 'AWS::EC2::Subnet'
     Properties:
-      AvailabilityZone:
-        Fn::Select:
-          - 0
-          - Fn::GetAZs: !Ref AWS::Region
+      AvailabilityZone: !Ref AvailabilityZone0
       CidrBlock: 10.0.0.0/22
       MapPublicIpOnLaunch: false
       VpcId: !Ref Vpc
@@ -48,10 +45,7 @@ Resources:
   PrivateSubnet1:
     Type: 'AWS::EC2::Subnet'
     Properties:
-      AvailabilityZone:
-        Fn::Select:
-          - 1
-          - Fn::GetAZs: !Ref AWS::Region
+      AvailabilityZone: !Ref AvailabilityZone1
       CidrBlock: 10.0.4.0/22
       MapPublicIpOnLaunch: false
       VpcId: !Ref Vpc
@@ -62,10 +56,7 @@ Resources:
   PublicSubnet0:
     Type: 'AWS::EC2::Subnet'
     Properties:
-      AvailabilityZone:
-        Fn::Select:
-          - 0
-          - Fn::GetAZs: !Ref AWS::Region
+      AvailabilityZone: !Ref AvailabilityZone0
       CidrBlock: 10.0.255.235/28
       MapPublicIpOnLaunch: true
       VpcId: !Ref Vpc
@@ -76,10 +67,7 @@ Resources:
   PublicSubnet1:
     Type: 'AWS::EC2::Subnet'
     Properties:
-      AvailabilityZone:
-        Fn::Select:
-          - 1
-          - Fn::GetAZs: !Ref AWS::Region
+      AvailabilityZone: !Ref AvailabilityZone1
       CidrBlock: 10.0.255.240/28
       MapPublicIpOnLaunch: true
       VpcId: !Ref Vpc
@@ -398,3 +386,13 @@ Parameters:
     Description: Size of each instance's root EBS volume (in GB)
     Default: 10
     MinValue: 10
+
+  AvailabilityZone0:
+    Type: 'AWS::EC2::AvailabilityZone::Name'
+    Description: The availability zone for the first subnet
+    Default: us-east-1a
+
+  AvailabilityZone1:
+    Type: 'AWS::EC2::AvailabilityZone::Name'
+    Description: The availability zone for the second subnet
+    Default: us-east-1b
