Use stack script instead of buildkite-stack script for packer

--- a/packer-stack.yml
+++ b/packer-stack.yml
@@ -1,7 +1,7 @@
 ---
 AWSTemplateFormatVersion: 2010-09-09
 Resources:
-  Packer:
+  Stack:
     Type: 'AWS::CloudFormation::Stack'
     Properties:
       TemplateURL: !Sub https://s3.amazonaws.com/buildkite-aws-stack/${BuildkiteStackVersion}/aws-stack.json
