--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,7 +4,7 @@ env:
 
 steps:
   - name: ":buildkite: Packer Queue"
-    command: "bin/buildkite-stack packer BuildStack=$BUILD_STACK"
+    command: "bin/stack packer"
     agents:
       queue: buildkite
     env:
