--- a/stack.yml
+++ b/stack.yml
@@ -14,6 +14,7 @@ Resources:
         BuildkiteOrgSlug: !Ref BuildkiteOrgSlug
         BuildkiteQueue: !Ref BuildkiteQueue
         InstanceType: !Ref InstanceType
+        ManagedPolicyARN: !Ref ManagedPolicy
         MaxSize: !Ref MaxSize
         MinSize: !Ref MinSize
         RootVolumeSize: !Ref RootVolumeSize
@@ -34,6 +35,20 @@ Resources:
           Fn::ImportValue: !Sub ${BuildStack}-Subnets
         VpcId:
           Fn::ImportValue: !Sub ${BuildStack}-VpcId
+
+  ManagedPolicy:
+    Type: 'AWS::IAM::ManagedPolicy'
+    Properties:
+      ManagedPolicyName: ManagedPolicy
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Action: s3:Put*
+            Resource: !Sub arn:aws:s3:::${SecretsBucket}/terraform/*
+          - Effect: Allow
+            Action: sts:AssumeRole
+            Resource: !Ref AccountRoles
 
 Parameters:
   BuildStack:
@@ -119,3 +134,8 @@ Parameters:
     Description: Size of each instance's root EBS volume (in GB)
     Default: 10
     MinValue: 10
+
+  AccountRoles:
+    Type: 'CommaDelimitedList'
+    Description: A comma separated list roles that can be assumed as
+    Default: ''
