--- a/stack.yml
+++ b/stack.yml
@@ -56,6 +56,9 @@ Resources:
           - Effect: Allow
             Action: sts:AssumeRole
             Resource: !Ref AccountRoles
+          - Effect: Allow
+            Action: ecr:*
+            Resource: "*"
 
 Parameters:
   BuildStack:
