--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -36,23 +36,10 @@ steps:
     env:
       BUILDKITE_QUEUE: default
       INSTANCE_TYPE: m3.large
-      MIN_SIZE: 0
+      MIN_SIZE: 3
       MAX_SIZE: 20
       ROOT_VOLUME_SIZE: 100
-
-  - name: ":buildkite: Default Queue (Spot Fleet)"
-    command: "bin/stack default-spot"
-    branches: master
-    agents:
-      queue: buildkite
-    env:
-      BUILDKITE_QUEUE: default
-      INSTANCE_TYPE: m3.large
-      MIN_SIZE: 5
-      MAX_SIZE: 5
-      ROOT_VOLUME_SIZE: 100
       SPOT_PRICE: 0.1340
-      TEMPLATE: stack-spot.yml
 
   - name: ":buildkite: Build Queue"
     command: "bin/stack build"
@@ -67,6 +54,7 @@ steps:
       ROOT_VOLUME_SIZE: 500
       SCALE_UP_ADJUSTMENT: 1
       AGENTS_PER_INSTANCE: 5
+      SPOT_PRICE: 0.2670
 
   - name: ":buildkite: Packer Queue"
     command: "bin/stack packer"
