--- a/packer-stack.yml
+++ b/packer-stack.yml
@@ -61,6 +61,7 @@ Resources:
               - ec2:DescribeImages
               - ec2:DescribeInstanceStatus
               - ec2:DescribeInstances
+              - ec2:DescribeKeyPairs
               - ec2:DescribeRegions
               - ec2:DescribeSecurityGroups
               - ec2:DescribeSnapshots
