--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,6 +1,6 @@
 FROM amazonlinux
 
-RUN yum install -y sudo python2 python2-pip python2-devel wget
+RUN yum install -q -y sudo
 ADD . /app
 
 WORKDIR /app
